--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,15 @@
     "module": "CommonJS",
     "rootDir": "./src",
     "outDir": "./dist",
-    "newLine": "lf",
+    "newLine": "crlf",
     "noEmitOnError": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "allowJs": true,
+    "types": [
+      "node"
+    ]
   }
 }
