--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "tsc && node ./dist/index.js",
-    "start": "node /dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "pm2 start ./dist/index.js"
   },
   "author": "",
   "license": "ISC",
