--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,9 +7,10 @@
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended"
     ],
+    "overrides": [],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 12,
+        "ecmaVersion": "latest",
         "sourceType": "module"
     },
     "plugins": [
@@ -64,7 +65,10 @@
         ],
         "consistent-return": "off",
         "consistent-this": "error",
-        "curly": "error",
+        "curly": [
+            "error",
+            "multi-or-nest"
+        ],
         "default-case": "error",
         "default-case-last": "error",
         "default-param-last": "error",
@@ -112,7 +116,7 @@
         "line-comment-position": "off",
         "linebreak-style": [
             "error",
-            "windows"
+            "unix"
         ],
         "lines-around-comment": "error",
         "lines-between-class-members": [
@@ -125,10 +129,12 @@
         "max-classes-per-file": "error",
         "max-depth": "off",
         "max-len": [
-            2, // error
+            1, // error
             200, // max-len
             4 // tab len
         ],
+        "react/jsx-uses-react": "off",
+        "react/react-in-jsx-scope": "off",
         "max-lines": "off",
         "max-lines-per-function": "off",
         "max-nested-callbacks": "error",
@@ -231,7 +237,12 @@
             "error",
             "always"
         ],
-        "object-property-newline": "warn",
+        "object-property-newline": [
+            "warn",
+            {
+                "allowAllPropertiesOnSameLine": true
+            }
+        ],
         "object-shorthand": "error",
         "one-var": "off",
         "one-var-declaration-per-line": "error",
