--- a/package.json
+++ b/package.json
@@ -5,21 +5,27 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "tsc && node ./dist/index.js",
-    "start": "pm2 start ./dist/index.js"
+    "start": "tsc && pm2 start ./dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "pm2": "^5.2.0",
     "sqlite3": "^5.0.8",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.0.0",
     "@types/sqlite3": "^3.1.8",
     "@types/uuid": "^8.3.4",
